update api riuters notices
