# app.js
@@ -21,7 +21,7 @@ app.use(express.json());
 app.use(express.static('public'));
 
 app.use('/api/auth', authRouter);
-app.use('/api/users', usersRouter);
+app.use('/api/user', usersRouter);
 app.use('/api/news', newsRouter)
 app.use('/api/notices', noticesRouter)
 app.use('/api/friends', friendsRouter)
