# controllers/notices/getNoticesByCategory.js
@@ -3,8 +3,7 @@ const { RequestError } = require('../../helpers');
 
 const getNoticesByCategory = async (req, res) => {
     const { category } = req.params;
-    const notices = await Notice.find({ category: category });
-    console.log(notices)
+    const notices = await Notice.find({ category });
     if (!notices) {          
         throw RequestError(404, 'No any notices in this category');
     }
