# routes/api/notices.js
@@ -7,20 +7,18 @@ const { notices: schema } = require('../../schemas');
 const { ctrlWrapper } = require('../../helpers');
 const { validateBody, authenticate } = require('../../middlewares');
 
-router.get('/:category', ctrlWrapper(ctrl.getNoticesByCategory));
+    router.get('/myFavorite', authenticate, ctrlWrapper(ctrl.getFavoriteNotices));
 
-router.get('/getOne/:id', ctrlWrapper(ctrl.getNoticeById));
+    router.get('/:category', ctrlWrapper(ctrl.getNoticesByCategory));
+            
+    router.get('/getOne/:noticeId', ctrlWrapper(ctrl.getNoticeById));
+    
+    router.get('/', authenticate, ctrlWrapper(ctrl.getUsersNotices));
 
-router.get('/', authenticate, ctrlWrapper(ctrl.getUsersNotices));
+    router.post('/', authenticate, validateBody(schema.addNoticeSchema), ctrlWrapper(ctrl.addNotice))
 
-router.post('/', authenticate, validateBody(schema.addNoticeSchema), ctrlWrapper(ctrl.addNotice))
+    router.delete('/:noticeId', authenticate, ctrlWrapper(ctrl.deleteNotice));
 
-router.delete('/:noticeId', authenticate, ctrlWrapper(ctrl.deleteNotice));
-
-router.get('/favorite', authenticate, ctrlWrapper(ctrl.getFavoriteNotices));
-
-router.get('/favorite/:noticeId', authenticate, ctrlWrapper(ctrl.addFavoriteNotice));
-
-
+    router.get('/favorite/:noticeId', authenticate, ctrlWrapper(ctrl.addFavoriteNotice));
 
 module.exports = router;
